--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.710Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     },
     {
         "key": "wd",
@@ -86,52 +86,25 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
-    },
-    {
-        "key": "c_user",
-        "value": "61582837655459",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
-    },
-    {
-        "key": "xs",
-        "value": "25%3Auw5riftTd_LbJw%3A2%3A1761889085%3A-1%3A-1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
-    },
-    {
-        "key": "fr",
-        "value": "0oiyAjO5FJyPqfu1L.AWcmvxT2Pt_2iLCdGl6iPfyHTypgdW4P69BqDetCwRNo4ADZQMw.Bo87VN..AAA.0.0.BpBEs_.AWedls6Pha0OjSD7LHYP3SlfH9c",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
-    },
-    {
-        "key": "fbl_st",
-        "value": "101630788%3BT%3A29364818",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2969%3Btimestamp%3A1761889087",
+        "value": "v2%3Bclient_version%3A2969%3Btimestamp%3A1761890852",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T05:40:17.711Z",
-        "lastAccessed": "2025-10-31T05:40:17.711Z"
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
+    },
+    {
+        "key": "fr",
+        "value": "0oiyAjO5FJyPqfu1L.AWdt20wmHOebpgV0Ii_-0c0po8rz9KFODpdD14O9c0t95vKmemQ.Bo87VN..AAA.0.0.BpBFKS.AWfquVFJlVi6eLqR81I4EOdBzto",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-31T06:09:36.132Z",
+        "lastAccessed": "2025-10-31T06:09:36.132Z"
     }
 ]
