--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.445Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
         "key": "wd",
@@ -86,25 +86,52 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2969%3Btimestamp%3A1761890852",
+        "key": "c_user",
+        "value": "61582837655459",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
+    },
+    {
+        "key": "xs",
+        "value": "44%3ARM2fb6lIBTRIDA%3A2%3A1761891145%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     },
     {
         "key": "fr",
-        "value": "0oiyAjO5FJyPqfu1L.AWdt20wmHOebpgV0Ii_-0c0po8rz9KFODpdD14O9c0t95vKmemQ.Bo87VN..AAA.0.0.BpBFKS.AWfquVFJlVi6eLqR81I4EOdBzto",
+        "value": "0oiyAjO5FJyPqfu1L.AWdeMJMb_XnXdP687_lk9fdGroeY3ONwctuNy6DipLYjAtzcPV8.Bo87VN..AAA.0.0.BpBFNK.AWd9XXNBbRZQpxQreGO8sY-5ZZM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T06:09:36.132Z",
-        "lastAccessed": "2025-10-31T06:09:36.132Z"
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2969%3Btimestamp%3A1761891146",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101517664%3BT%3A29364852",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-31T06:12:34.446Z",
+        "lastAccessed": "2025-10-31T06:12:34.446Z"
     }
 ]
