--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.670Z",
-        "lastAccessed": "2025-10-31T16:17:14.670Z"
+        "creation": "2025-10-31T16:37:10.176Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "locale",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "pas",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "wd",
@@ -86,8 +86,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "c_user",
@@ -95,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "xs",
-        "value": "4%3AKa3NMKlnkWe_4w%3A2%3A1761927331%3A-1%3A-1",
+        "value": "42%3AulyApuKsZo6QnA%3A2%3A1761928593%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "fr",
-        "value": "0oiyAjO5FJyPqfu1L.AWdAM4-ZqdUa-KwHFa_NzWtSsL_Caee666E1VEjrdPJSh_kDR4E.Bo87VN..AAA.0.0.BpBOCk.AWcSS7hGNnArN4IOvaI61l4nhRs",
+        "value": "0oiyAjO5FJyPqfu1L.AWfVIwM-EekSs_Ri1zKr5P8dyKCtDQUJbsSntcT2AF8t1o_P5ks.Bo87VN..AAA.0.0.BpBOWT.AWe3e-i93qglYfNJy_yd76ph9es",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2969%3Btimestamp%3A1761927332",
+        "value": "v2%3Bclient_version%3A2969%3Btimestamp%3A1761928596",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     },
     {
         "key": "fbl_st",
-        "value": "100417490%3BT%3A29365455",
+        "value": "101739308%3BT%3A29365476",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-31T16:17:14.671Z",
-        "lastAccessed": "2025-10-31T16:17:14.671Z"
+        "creation": "2025-10-31T16:37:10.177Z",
+        "lastAccessed": "2025-10-31T16:37:10.177Z"
     }
 ]
